--- a/SSO_Api.csproj
+++ b/SSO_Api.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <!-- Suppress all nullable warnings -->
-    <NoWarn>$(NoWarn);CS8632</NoWarn>
+    <!-- Suppress common warnings that can break Railway builds -->
+    <NoWarn>$(NoWarn);CS8632;CS0168;CS0219;CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8625</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
